Refactor cloud-init configuration for Kubernetes setup

--- a/user-data_the-first-master-node.yml
+++ b/user-data_the-first-master-node.yml
@@ -53,9 +53,8 @@ write_files:
         sleep 2
       done
 
-      apt-get update -y
-      apt-get upgrade -y
-      apt-get install -y chrony
+      apt update -y && apt upgrade -y
+      apt install -y chrony
       systemctl enable --now chrony
 
       cat > /etc/chrony/chrony.conf <<'EOF'
@@ -149,4 +148,5 @@ power_state:
   mode: reboot
   message: "Reboot after cloud-init provisioning"
   timeout: 60
+
   condition: true
